# fontina

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  python-publish.yml
configs/: adobe-vfr-autoencoder.yaml  adobe-vfr.yaml  sample.yaml
src/fontina/: adobevfr_dataset.py  augmentation_utils.py  augmented_dataset.py  config.py  detect.py  generate.py  predict.py  train.py
src/fontina/models/: deepfont.py  lightning_generate_callback.py  lightning_wrappers.py
tests/: test_augmentations.py
